tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/trailing-point.stderr
TOML parse error at line 1, column 20
  |
1 | trailing-point = 1.
  |                    ^
invalid floating-point number
expected digit
